hphp/hack/test/typecheck/T120247995.php.exp
File "T120247995.php", line 10, characters 13-16:
You are trying to access the method `ohno` but this is an int (Typing[4062])
  File "interfaces.hhi", line 92, characters 66-67:
  Definition is here
